--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <h4 class="card-heading">
                         
                         <span class="card-heading-span card-heading-span-wonderla">Wonderla</span>
+
                     </h4><br>
                     <div class="card-details">
                         <ul>
@@ -77,7 +78,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="card-side card-side-back card-side-back-wonderla">
+                <div class="card-side card-side-back card-side-back-wonderla" style="background-image: url('img/wonderla.jpg'); background-size: cover; background-position: center; height: 200px;">&nbsp;</div?
                     <div class="card-cal">
                         <div class="card-detail-box">
                             <p class="card-detail-only">Top Spot</p>
@@ -93,7 +94,7 @@
         <div class="col-3">
             <div class="card">
                 <div class="card-side card-side-front">
-                    <div class="card-picture card-picture-food">&nbsp;</div>
+                    <div class="card-picture card-picture-food"style="background-image: url('img/ragi_mudde.jpg'); background-size: cover; background-position: center; height: 200px;">&nbsp;</div>
                     <h4 class="card-heading">
                         <span class="card-heading-span card-heading-span-food">Karnataka Cuisine</span>
                     </h4><br>
@@ -122,7 +123,7 @@
         <div class="col-3">
             <div class="card">
                 <div class="card-side card-side-front">
-                    <div class="card-picture card-picture-dance">&nbsp;</div>
+                    <div class="card-picture card-picture-dance"style="background-image: url('img/yakshagana.jpg'); background-size: cover; background-position: center; height: 200px;">&nbsp;</div>
                     <h4 class="card-heading">
                         <span class="card-heading-span card-heading-span-dance">Traditional Dances</span>
                     </h4><br>
@@ -153,7 +154,7 @@
         <div class="col-3">
             <div class="card">
                 <div class="card-side card-side-front">
-                    <div class="card-picture card-picture-heritage">&nbsp;</div>
+                    <div class="card-picture card-picture-heritage">style="background-image: url('img/badami_caves.jpg'); background-size: cover; background-position: center; height: 200px;">&nbsp;</div>
                     <h4 class="card-heading">
                         <span class="card-heading-span card-heading-span-heritage">Heritage Sites</span>
                     </h4><br>
